# pyrometer

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  LICENSE-MIT  LIMITATIONS.md  README.md  THEORY.md  TODO.md  curta.sol  matic.sol  mini.sol  struct.sol  test.sol  test_import.sol  twitter_challenge.sol
cli/: .swp  Cargo.toml  dot.dot
cli/src/: main.rs
crates/analyzer/: Cargo.toml  lib.rs
crates/analyzer/analyzers/: mod.rs
crates/analyzer/analyzers/var_analyzer/: mod.rs
crates/analyzer/src/: analyzer_like.rs
crates/analyzer/src/analyzers/: bounds.rs
crates/analyzer/src/analyzers/func_analyzer/: report_display.rs
crates/analyzers/: Cargo.toml
crates/analyzers/src/: bounds.rs  lib.rs
crates/analyzers/src/func_analyzer/: mod.rs  report_display.rs
crates/analyzers/src/var_analyzer/: mod.rs  report_display.rs
crates/cli/: Cargo.toml  profile.json
crates/cli/src/: main.rs
crates/cli/src/detectors/: mod.rs  my_detector.rs  second_detector.rs
crates/graph/: Cargo.toml  lib.rs  search.rs  var_type.rs
crates/graph/nodes/: builtin.rs  concrete.rs  func_ty.rs  mod.rs  msg.rs  ty_ty.rs
crates/graph/nodes/context/: context_tys.rs  expr_ret.rs  underlying.rs
crates/graph/src/: graph_elements.rs  graph_like.rs  lib.rs  test_command.rs  var_type.rs
crates/graph/src/nodes/: block.rs  builtin.rs  concrete.rs  contract_ty.rs  debug_reconstruction.rs  enum_ty.rs  env_ctx.rs  err_ty.rs  func_ty.rs  mod.rs  msg.rs  source_unit.rs  source_unit_part.rs  struct_ty.rs  ty_traits.rs  ty_ty.rs  var_ty.rs  yul_func.rs
crates/graph/src/nodes/context/: context_tys.rs  expr_ret.rs  invariants.rs  mod.rs  node.rs  querying.rs  solving.rs  typing.rs  underlying.rs  variables.rs  versioning.rs
crates/graph/src/nodes/context/var/: invariants.rs  mod.rs  node.rs  ranging.rs  typing.rs  underlying.rs  versioning.rs
crates/graph/src/range/: exec_traits.rs  mod.rs  range_string.rs  range_trait.rs  solc_range.rs
crates/graph/src/range/elem/: concrete.rs  elem_enum.rs  elem_trait.rs  expr.rs  map_or_array.rs  mod.rs  reference.rs
crates/graph/src/range/elem/elem_enum/: arena.rs  impls.rs  mod.rs  ops.rs  range_elem.rs  traits.rs
crates/graph/src/range/elem/expr/: collapse.rs  mod.rs
crates/graph/src/range/exec/: add.rs  bitwise.rs  cast.rs  concat.rs  div.rs  exec_op.rs  exp.rs  logical.rs  max.rs  min.rs  mod.rs  modulo.rs  mul.rs  ord.rs  shift.rs  sub.rs
crates/graph/src/range/exec/math_ops/: add.rs  div.rs  exp.rs  mod.rs  modulo.rs  mul.rs  sub.rs
crates/graph/src/range/exec/mem_ops/: concat.rs  mem_get.rs  mem_set.rs  memcopy.rs  mod.rs
crates/graph/src/range/exec/truthy_ops/: logical.rs  mod.rs  ord.rs
crates/graph/src/range/simplify/: add_rules.rs  mod.rs  mul_rules.rs
crates/graph/src/range_impl/: mod.rs  range_string.rs  solc_range.rs
crates/graph/src/range_impl/elem/: concrete.rs  elem_enum.rs  expr.rs  map_or_array.rs  mod.rs  reference.rs
crates/graph/src/range_impl/exec/: add.rs  bitwise.rs  cast.rs  concat.rs  div.rs  exec_op.rs  exp.rs  logical.rs  max.rs  min.rs  mod.rs  modulo.rs  mul.rs  ord.rs  shift.rs  sub.rs
crates/graph/src/solvers/: atoms.rs  brute.rs  dl.rs  mod.rs
crates/pyrometer/: Cargo.toml
crates/pyrometer/benches/: README.md  parse.rs
crates/pyrometer/src/: analyzer.rs  analyzer_backend.rs  builtin_fns.rs  detector.rs  graph_backend.rs  lib.rs  reporter.rs
crates/pyrometer/tests/: helpers.rs  no_killed_ctxs.rs
crates/pyrometer/tests/benches/: flat_comptroller.sol  flat_ctoken.sol
crates/pyrometer/tests/challenges/: apron.sol  reverse_bound_propogation.sol
crates/pyrometer/tests/test_data/: abstract.sol  assembly.sol  assign.sol  bin_op.sol  bitwise.sol  broken.sol  cast.sol  cmp.sol  cond_op.sol  const_var.sol  constructor.sol  delete.sol  dyn_types.sol  env.sol  func_override.sol  function_calls.sol  interface.sol  intrinsics.sol  join.sol  literals.sol  logical.sol  loops.sol  math.sol  modifier.sol  named_func_call.sol  precedence.sol  remapping_import.sol  require.sol  require_with_killed.sol  storage.sol  todo.sol  using.sol  variable.sol  view_apply.sol
crates/pyrometer/tests/test_data/broken/: delete.sol  require_killed.sol
crates/pyrometer/tests/test_data/relative_imports/: relative_import.sol
crates/pyrometer/tests/test_data/repros/: issue50.sol  issue66.sol  issue69.sol  overflow.sol  overflow2.sol
crates/pyrometer/tests/test_data/viz/: basic.sol  func_call.sol
crates/shared/: Cargo.toml
crates/shared/src/: analyzer_like.rs  error.rs  flattened.rs  flattened_yul.rs  gas.rs  graph_like.rs  lib.rs  mermaidConfig.json  search.rs
crates/solc-expressions/: Cargo.toml
crates/solc-expressions/src/: array.rs  assign.rs  bin_op.rs  cmp.rs  cond_op.rs  env.rs  error.rs  lib.rs  list.rs  literal.rs  loops.rs  member_access.rs  pre_post_in_decrement.rs  require.rs  variable.rs
crates/solc-expressions/src/context_builder/: expr.rs  flattened.rs  fn_calls.rs  mod.rs  stmt.rs  test_command_runner.rs
crates/solc-expressions/src/func_call/: apply.rs  func_caller.rs  helper.rs  internal_call.rs  intrinsic_call.rs  join.rs  mod.rs  modifier.rs  namespaced_call.rs
crates/solc-expressions/src/func_call/intrinsic_call/: abi.rs  address.rs  array.rs  block.rs  constructors.rs  dyn_builtin.rs  intrinsic_caller.rs  mod.rs  msg.rs  precompile.rs  solidity.rs  types.rs
crates/solc-expressions/src/member_access/: builtin_access.rs  contract_access.rs  enum_access.rs  error_access.rs  library_access.rs  list_access.rs  member_trait.rs  mod.rs  struct_access.rs
crates/solc-expressions/src/yul/: mod.rs  yul_builder.rs  yul_cond_op.rs  yul_funcs.rs
crates/solvers/: Cargo.toml
crates/solvers/src/: lib.rs
proptester/: Cargo.toml
proptester/src/: dag.rs  lib.rs
shared/: Cargo.toml
shared/src/: analyzer.rs  lib.rs
shared/src/context/: expr_ret.rs  mod.rs  var.rs
shared/src/nodes/: block.rs  concrete.rs  contract_ty.rs  enum_ty.rs  err_ty.rs  func_ty.rs  mod.rs  msg.rs  struct_ty.rs  ty_ty.rs  var_ty.rs
shared/src/range/: elem.rs  elem_ty.rs  mod.rs  range_ops.rs  range_string.rs
(+156 files in other folders)
