[workspace]
members = [
	"crates/analyzer",
	"crates/cli",
	"crates/graph",
	"crates/pyrometer",
	"crates/queries",
	"crates/range",
	"crates/solc_expressions",
]


[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Brock Elmore"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nascentxyz/pyrometer"
repository = "https://github.com/nascentxyz/pyrometer"
exclude = ["benches/", "tests/"] # exclude the benches directory from the build


[profile.release]
debug = true

[profile.dev]
opt-level = 1  # Enable some optimizations like tail call
inline = true

[profile.bench]
debug = true

[workspace.dependencies]
analyzer = { path = "crates/analyzer" }
graph = { path = "crates/graph" }
pyrometer = { path = "crates/pyrometer" }
queries = { path = "crates/queries" }
range = { path = "crates/range" }
solc_expressions = { path = "crates/solc_expressions" }

solang-parser = { version = "0.2.4", features = ["pt-serde"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = "0.3"
ethers-core = "*"
hex = "0.4.3"
ariadne = "0.2.0"
petgraph = "0.6.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dev-dependencies]
# criterion = { version = "0.4"} # benching

# [workspace]
# members = ["cli", "shared"]

# we patch ariadne to allow for counting by bytes because solang uses byte locations not char locations
[patch.crates-io]
ariadne = {git = "https://github.com/brockelmore/ariadne"}

######################################
# Benchmarks
######################################
[[example]]
name = "parse"
path = "examples/parse.rs"

[[bench]]
name = "parse"
harness = false