[workspace]
members = [
	"crates/analyzers",
	"crates/cli",
	"crates/graph",
	"crates/pyrometer",
	"crates/queries",
	"crates/shared",
	"crates/solc-expressions",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Brock Elmore"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nascentxyz/pyrometer"
repository = "https://github.com/nascentxyz/pyrometer"
exclude = ["benches/", "tests/", "examples/"] # exclude the benches directory from the build
rust-version = "1.74"

[profile.release]
debug = true

[profile.dev]
opt-level = 1  # Enable some optimizations like tail call
inline = true

[profile.bench]
debug = true

[workspace.dependencies]
analyzers = { path = "crates/analyzers" }
graph = { path = "crates/graph" }
pyrometer = { path = "crates/pyrometer" }
queries = { path = "crates/queries" }
shared = { path = "crates/shared" }
solc-expressions = { path = "crates/solc-expressions" }

solang-parser = { version = "0.2.4", features = ["pt-serde"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing-tree = "0.3.0"
ethers-core = "*"
hex = "0.4.3"
ariadne = "0.4.1"
petgraph = "0.6.2"
ahash = "0.8.10"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [workspace]
# members = ["cli", "shared"]

# ######################################
# # Benchmarks
# ######################################

# [[bench]]
# name = "parse"
# harness = false