[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
pyrometer = { path = "../" }
shared = { path = "../shared" }
ariadne = "0.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
petgraph = "0.6.2"
serde_json = "1"

[[bin]]
name = "pyrometer"
path = "src/main.rs"


[profile.release]
debug = true