[package]
name = "proptester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = "1.1.0"
pyrometer = { path = "../" }
ethers-core = "*"
shared = { path = "../shared" }

[profile.release]
debug = true
