[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-core = "*"
petgraph = "0.6.2"
solang-parser = { version = "0.2.1", features = ["pt-serde"] }
lazy_static = "1.4.0"
hex = "0.4.3"