[package]
name = "range"
description = "Pyrometer's analyzer traits"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
graph.workspace = true
range.workspace = true
solang-parser.workspace = true
ariadne.workspace = true