[package]
name = "graph"
description = "Pyrometer's internal graph"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
shared.workspace = true
range.workspace = true
solang-parser.workspace = true

petgraph.workspace = true
ethers-core.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

lazy_static = "1.4.0"