[package]
name = "graph"
description = "Pyrometer's internal graph"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
shared.workspace = true
solang-parser.workspace = true

petgraph.workspace = true
alloy-primitives.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

itertools = "0.10.5"
lazy_static = "1.4.0"
keccak-hash = "0.10.0"


[dev-dependencies]
pretty_assertions = "1.4.0"
