[package]
name = "pyrometer"
description = "Core Pyrometer library and analyzer implementation"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
analyzers.workspace = true
graph.workspace = true
solc-expressions.workspace = true
shared.workspace = true

petgraph.workspace = true
solang-parser.workspace = true
ethers-core.workspace = true
ariadne.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ahash.workspace = true
serde_json = "1"




[dev-dependencies]
criterion = { version = "0.4"} # benching

[[bench]]
name = "parse"
harness = false