[package]
name = "solc-expressions"
description = "Pyrometer's parsing of solidity-based expressions"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
analyzers.workspace = true
graph.workspace = true
shared.workspace = true

petgraph.workspace = true
solang-parser.workspace = true
alloy-primitives.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

keccak-hash = "0.10.0"

[dev-dependencies]
pyrometer.workspace = true
eyre = "0.6"
