[package]
name = "solvers"
description = "SMT solvers"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
petgraph.workspace = true
graph.workspace = true
range.workspace = true
ethers-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

itertools = "0.12.0"
